# Asembler

./: CMakeLists.txt  README.md  assembler.c  assembler.h
commands/: addressing.c  addressing.h  directives.c  directives.h  encoding.c  encoding.h  instructions.c  instructions.h  opcodes.c  opcodes.h  registers.c  registers.h
compile/: segments.c  segments.h  symbols.c  symbols.h  transactions.c  transactions.h
data_structures/: node.c  node.h  table.c  table.h
errors/: errors.c  errors.h  errors_handling.c  errors_handling.h
precompile/: comments.c  comments.h  macros.c  macros.h
tests/: course_test.ob  data_and_string_errors.am  long_line_test.am  none_exist_symbol_use.am  without_symbols.as  without_symbols.ob  wrong_opcode_addressing.as
utils/: args_utils.c  args_utils.h  array_utils.c  array_utils.h  file_utils.c  file_utils.h  strings_utils.c  strings_utils.h
